--- a/index.html
+++ b/index.html
@@ -1,177 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Personal Website</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-    }
-
-    /* Sticky Nav */
-    nav {
-      position: sticky;
-      top: 0;
-      background: linear-gradient(135deg, #5fbf77, #2c7a4d);
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      z-index: 1000;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #d4f5e9;
-    }
-
-    header {
-      height: 100vh;
-      background: linear-gradient(135deg, #5fbf77, #2c7a4d);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 2rem;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      animation: fadeInDown 1s ease-out;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      margin-top: 10px;
-      animation: fadeInUp 1.5s ease-out;
-    }
-
-    .scroll-down {
-      margin-top: 40px;
-      font-size: 1.2rem;
-      cursor: pointer;
-      animation: bounce 2s infinite;
-    }
-
-    section {
-      padding: 80px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    section h2 {
-      font-size: 2.2rem;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    section p {
-      line-height: 1.6;
-      font-size: 1.1rem;
-    }
-
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-30px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes bounce {
-
-      0%,
-      100% {
-        transform: translateY(0);
-      }
-
-      50% {
-        transform: translateY(8px);
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matthew's Website</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
-
 <body>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#experience">Experience & Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-  <!-- Sticky Nav -->
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#handles">Handles</a>
-  </nav>
+    <section id="home" class="landing">
+        <div class="container">
+            <h1>Hi! I'm Matthew</h1>
+            <p> [Placeholder Image] </p>
+            <div class="scroll-down" onclick="document.getElementById('about').scrollIntoView({ behavior: 'smooth' });">
+                ↓ Scroll Down
+            </div>
+        </div>
+    </section>
 
-  <!-- Hero / Home Section -->
-  <header id="home">
-    <h1>Hi! I'm Matthew Hui</h1>
-    <p>[image placeholder]</p>
-    <div class="scroll-down" onclick="document.getElementById('about').scrollIntoView({ behavior: 'smooth' });">
-      ↓ Scroll Down
-    </div>
-  </header>
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <div class="about-block professional">
+                <div class="about-text">
+                    <h3>About Myself</h3>
+                    <p>Hi, I'm Matthew Hui, a senior at Cornell University studying Electrical & Computer Engineering! 
+                        I'm really excited to pursue a career in Design Verification and I love all things 
+                        related to computers! My interests lie in chip design & verification and I have previous experience 
+                        working as a Digital Design Engineer working on both the RTL modeling and verification of 
+                        blocks on a custom ASIC.  
+                    </p>
+                </div>
+                <div class="about-image">
+                    <img src="placeholder-headshot.jpg" alt="Professional Headshot">
+                </div>
+            </div>
+            <div class="about-block personal">
+                <div class="about-image">
+                    <img src="placeholder-personal.jpg" alt="Personal Photo">
+                </div>
+                <div class="about-text">
+                    <h3>Personal Interests</h3>
+                    <p> Outside of the workplace, I really enjoy spending time outdoors whether it be hiking or camping in different parks!.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- About Me Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      #Todo
-    </p>
-  </section>
+    <section id="experience" class="experience-projects">
+        <div class="container">
+            <h2>Experience</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date">Jul 2025 - Present</div>
+                    <div class="timeline-content">
+                        <h3>Verification Engineer</h3>
+                        <p>NVIDIA</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">Jun 2024 - Aug 2024</div>
+                    <div class="timeline-content">
+                        <h3>Digital ASIC Design Intern</h3>
+                        <p>Keysight Technologies</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">May 2023 - Aug 2023</div>
+                    <div class="timeline-content">
+                        <h3>Sensata Technologies</h3>
+                        <p>Electrical Design Intern</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">May 2022 - Aug 2022</div>
+                    <div class="timeline-content">
+                        <h3>Starbucks</h3>
+                        <p>Barista</p>
+                    </div>
+                </div>
+            </div>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <p>
-      #Todo
-    </p>
-  </section>
+            <h2>Projects</h2>
+            <div class="projects">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="placeholder-project1.jpg" alt="Project 1">
+                    </div>
+                    <div class="project-details">
+                        <h3>Deconcentrator Design & Verification for DSP ASIC</h3>
+                        <div class="project-skills">
+                            <span>Verilog</span>
+                            <span>SystemVerilog</span>
+                            <span>Python</span>
+                            <span>Cadence Genus & SimVision</span>
+                        </div>
+                        <p class="project-description">
+                            In this project, I created a block design, RTL design of modules and conducted 
+                            first pass verification of a small block for an upcoming ASIC design during 
+                            my internship at Keysight Technologies. This project highlights many of the 
+                            steps across the ASIC design process, starting from translating specifications 
+                            into a block design, then moving to conducting RTL design applying synthesizable 
+                            principles while co-designing these blocks through various testbenches for verification. 
+                            At a high level, the block I designed and worked on is a demuxer with additional 
+                            FIFO logic where it serves as a buffer point between two different regions of the 
+                            chip - a single streamed input and a 16-stream output. RTL modules and submodules 
+                            were assembled using verilog, using synthesizable and efficient design where 
+                            applicable while testbenches and golden modules for verification were built 
+                            with SystemVerilog and Python. 
+                        </p>
+                    </div>
+                </div>
 
-  <!-- Handles Section -->
-  <section id="handles">
-    <h2>Find Me Online</h2>
-    <p>
-      GitHub: <a href="https://github.com/mmh257" target="_blank">github.com/mmh257</a><br />
-      LinkedIn: <a href="https://www.linkedin.com/in/mhui81/" target="_blank">Matthew Hui</a><br />
-    </p>
-  </section>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="placeholder-project2.jpg" alt="Project 2">
+                    </div>
+                    <div class="project-details">
+                        <h3>Project Title 2</h3>
+                        <div class="project-skills">
+                            <span>Skill 1</span>
+                            <span>Skill 2</span>
+                            <span>Skill 3</span>
+                            <span>Skill 4</span>
+                        </div>
+                        <p class="project-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor.
+                        </p>
+                    </div>
+                </div>
 
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="placeholder-project3.jpg" alt="Project 3">
+                    </div>
+                    <div class="project-details">
+                        <h3>Project Title 3</h3>
+                        <div class="project-skills">
+                            <span>Skill 1</span>
+                            <span>Skill 2</span>
+                            <span>Skill 3</span>
+                            <span>Skill 4</span>
+                        </div>
+                        <p class="project-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/mhui81/" target="_blank" rel="noopener noreferrer">
+                    <img src="linkedin-icon.png" alt="LinkedIn">
+                </a>
+                <a href="https://github.com/mmh257" target="_blank" rel="noopener noreferrer">
+                    <img src="github-icon.png" alt="GitHub">
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Matthew Hui. All Rights Reserved.</p>
+    </footer>
 </body>
-
-</html>
+</html> 
